libqt6c/src/libqprogressbar.hpp

typedef struct QEvent QEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QPaintEvent QPaintEvent;
typedef struct QProgressBar QProgressBar;
typedef struct QSize QSize;
typedef struct QStyleOptionProgressBar QStyleOptionProgressBar;
typedef struct QWidget QWidget;
QProgressBar* QProgressBar_new(QWidget* parent);
QProgressBar* QProgressBar_new2();
QMetaObject* QProgressBar_MetaObject(const QProgressBar* self);
int QProgressBar_Minimum(const QProgressBar* self);
int QProgressBar_Maximum(const QProgressBar* self);
int QProgressBar_Value(const QProgressBar* self);
libqt_string QProgressBar_Text(const QProgressBar* self);
void QProgressBar_SetTextVisible(QProgressBar* self, bool visible);
bool QProgressBar_IsTextVisible(const QProgressBar* self);
int QProgressBar_Alignment(const QProgressBar* self);
void QProgressBar_SetAlignment(QProgressBar* self, int alignment);
QSize* QProgressBar_SizeHint(const QProgressBar* self);
QSize* QProgressBar_MinimumSizeHint(const QProgressBar* self);
int QProgressBar_Orientation(const QProgressBar* self);
void QProgressBar_SetInvertedAppearance(QProgressBar* self, bool invert);
bool QProgressBar_InvertedAppearance(const QProgressBar* self);
void QProgressBar_SetTextDirection(QProgressBar* self, int textDirection);
int QProgressBar_TextDirection(const QProgressBar* self);
void QProgressBar_SetFormat(QProgressBar* self, const libqt_string format);
void QProgressBar_ResetFormat(QProgressBar* self);
libqt_string QProgressBar_Format(const QProgressBar* self);
void QProgressBar_Reset(QProgressBar* self);
void QProgressBar_SetRange(QProgressBar* self, int minimum, int maximum);
void QProgressBar_SetMinimum(QProgressBar* self, int minimum);
void QProgressBar_SetMaximum(QProgressBar* self, int maximum);
void QProgressBar_SetValue(QProgressBar* self, int value);
void QProgressBar_SetOrientation(QProgressBar* self, int orientation);
void QProgressBar_ValueChanged(QProgressBar* self, int value);
bool QProgressBar_Event(QProgressBar* self, QEvent* e);
void QProgressBar_PaintEvent(QProgressBar* self, QPaintEvent* param1);
void QProgressBar_InitStyleOption(const QProgressBar* self, QStyleOptionProgressBar* option);
void QProgressBar_Delete(QProgressBar* self);